# Invoice_Data_Extractor

./: .gitignore  README.md  app.py  gpt_extractor.py  pyproject.toml  requirements.txt
